# glfw

./: CMakeLists.txt  imgui.ini
BasicLighting/: CMakeLists.txt
BasicLighting/src/: Camera.h  Shader.h  main.cpp
Camera/: CMakeLists.txt
Camera/src/: main.cpp
Coordinates/: CMakeLists.txt
Coordinates/src/: main.cpp
Coordinates/src/shaders/: default.frag  default.vert
Dependencies/include/glad/: glad.h
Texture/: CMakeLists.txt
Texture/src/: Shader.h  main.cpp
Texture/src/shaders/: default.frag  default.vert
Transformation/: CMakeLists.txt
Transformation/src/: glad.c  main.cpp
Transformation/src/shaders/: default.vert
Triangle/: CMakeLists.txt
Triangle/src/: main.cpp
src/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  glad.c  main.cpp  read_line.cpp  shader.cpp  shader.h
